[package]
name = "ipv4"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tylerwhall/ipv4-rs"
homepage = "https://github.com/tylerwhall/ipv4-rs"
description = "Encoding and decoding of IPv4 headers."

[dependencies]
bitflags = "0.8.2"
byteorder = "1.0.0"
